<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vehicle_telemetry</name>
  <version>0.1.0</version>
  <description>ROS2 data logging and replay stack for Formula Student driverless telemetry.</description>
  <maintainer email="abtindsn@gmail.com">Abtin Doostan</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>python-can</exec_depend>
  <exec_depend>pyserial</exec_depend>
  <exec_depend>pynmea2</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>fastapi</exec_depend>
  <exec_depend>uvicorn</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
